# lms

./: LICENSE  README.md  openapi.json
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  exam_attempt_schema.yml  openapi.json  task_answers_schema.yml  task_cfg_schema.yaml
backend/.sqlx/: query-011baf8cf9353cd8e35ac70e64e7172b9d8a1650d19e2e7eb8db3e2064e4be63.json  query-01fa676aabac70e17cf249ec21aaeae88d6efafbdde0d4a2df52956d248845ab.json  query-0259fb658ed58a06e7289a7ca747d4e50bdc4f0d4ab3cf06fb874ccec80ec98a.json  query-03efb0872a58cee486c48de705024723c5947045e7864e9700d60c2756d7a7a5.json  query-04e6c9672e2466838ef2e57ede7bf6b38c0a3a1987c8569e6bf7b337a89f92b5.json  query-07e71c64a6bbd21283397bc0ba399a775fe4730eff1f7ceb1bcdc0bff0ca7dd2.json  query-093e5302391db782d7460b1142bc80bbab309184ca2f7dced96b956952f57cc0.json  query-097673b1c78d04e029e854785dec9946e6aec0c9971803e24615c17546b791ed.json  query-0bce7dfe899c1250b8cac973044e8740a465436396db66006f8ee18f92b57fbe.json  query-0bf80f12caf41d2ab594a4fac7056a0bb818f6eba655daf41cd1265b03a869c2.json  query-0c331ef6825b069d3e5e43a839b5791eed0755fe937bd581b8106f6184fda177.json  query-0ccfff8dabd44f18f8a31259b07f8d0946b4585eadcdf6636a827322b61e1610.json  query-0d03e1b2327d6275f77917d890c8aff272fb8eda546ade026e34b6e9d96bf67b.json  query-0e3727e6a07dab8a77131921000049d2d17f37ee021d722fccf25b2135736223.json  query-0e6bbe2e5f9aa2c5456f501d68e59a59f6bad68aa408aadda2f8ccdb059e8395.json  query-0fa4615bccac4dc317d68679781efac98632947e65c600122c06834ed0f91110.json  query-102fd4b1fc047439ec8c68d22f5f07b8efdd140139f33213490d5e8b29d293c3.json  query-11b96b54ade5fee6ac1580f3270009583375551dc3c48e167a654c4c376d2350.json  query-129d9bb9ff567465ed75229634447ac2060e5064cce89f1e3820a595f795a208.json  query-13bce492a3a79dc29f0e5905d13bb024abdbc78c8bbf475d35e93400c03c31d0.json  query-144d4b18937e3e23cbe1a86e05211a38534dc37771484712064846d61e44bb2a.json  query-1466adf0a791f12ed8905f4cac79876ca487fe7675fb42bf17ee1a9652e866f5.json  query-188d9263240e5c9dad432317211addc75c5da90c63f933484ab98fdff93f5204.json  query-1975eae5e69b70c35a51a5f4b034692167bb1b1a227db76855d728e2d0e00eda.json  query-1cce80d2308d114acbb571ef8aa5682a51d719316b9c862e55685fa0e471756e.json  query-1ff4915661dc57a0af83b23cc69a23004742f355416e344796b89f774a61702e.json  query-213a8a30f8f1cca86a89853f6293983c57705951ac12c84f55b662d7c6be6f18.json  query-234d117adc10fbd02652a2aa699a65888d5805379d482550c5422597e4496641.json  query-23f825ee995c4e7399d6d077b87bd614e8768ddaafc24a371fa1119335a7c7c0.json  query-28336ab3dd9bc4823078f7a3cb0b0dd721dfbbd15c4afdeb7d6cc51dfebccdfa.json  query-2d3a278d1cc21ca75c23b5f3aaaedc310662e6e97390bfe023f88bae60a7e137.json  query-2f0e2ab3419624c27ed124ab85d7f3da82e0995ea67891ee24f151b909e921d3.json  query-2f7c10b3dae2359f38dda3e603e6a928dca4bc4e350e9639b38cc049d47afd9a.json  query-30418e856a02c03d6be88203aa07bcf741feefe2102277050bc2c23e1340e9a4.json  query-304aaf99f8909f8315b57fb42b4320de66e7abb2fe1e7bdd19d8c4fd7d5b06be.json  query-306f525889ddec7fa2d553b90400b7489c7106cf0352eedced6e41caec1e4a8a.json  query-309d086e8478bcdcfed86fa8f792bf9a79ab0c409347fc98ed69dfdbbfffbab6.json  query-32101d60be9fa5661f26ebbbe41504e396aa2c7ba8e920c15ab3d455254a0135.json  query-32f3515bec4fe28def41111b138c2fe67726c8bbe713ec0cb3a98a2a050234b4.json  query-35ca7262cfcebfe276e0602e218c99802cf147d06f1c0710a0b3a6156b4fd012.json  (+180 more)
backend/migrations/: 20250504155436_init.down.sql  20250505185414_attributes.down.sql  20250716174100_video.up.sql  20250718100609_account_avatar.down.sql  20250718100609_account_avatar.up.sql  20250720113645_lms_basic.down.sql  20250720113645_lms_basic.up.sql  20250721160210_fix_timestamp_fields.down.sql  20250721160210_fix_timestamp_fields.up.sql  20250727192301_change_attempts_structure.down.sql  20250727192301_change_attempts_structure.up.sql  20250801192432_add_exams.down.sql  20250801192432_add_exams.up.sql  20250814204748_exams_metadata.down.sql  20250814204748_exams_metadata.up.sql  20250827234550_make_ctfd_better.down.sql  20250827234550_make_ctfd_better.up.sql  20250907145510_unique_attributes.down.sql  20250907145510_unique_attributes.up.sql  20250907163853_course_access_filter.down.sql  20250907163853_course_access_filter.up.sql  20250908110836_change_attempts_lifetime_logic.down.sql  20250908110836_change_attempts_lifetime_logic.up.sql  20250910212448_add_exams_solving_timespan.down.sql  20250910212448_add_exams_solving_timespan.up.sql  20250913233356_add_predefined_attributes.down.sql  20250913233356_add_predefined_attributes.up.sql  20250922124922_change_exam_children_entities.down.sql  20250922124922_change_exam_children_entities.up.sql  20251007172446_created_entity_table.down.sql  20251007172446_created_entity_table.up.sql  20251115212721_add_sirius.down.sql  20251115212721_add_sirius.up.sql  20260718153107_lectures_content.down.sql  20260718153107_lectures_content.up.sql  20260718160129_practice.down.sql  20260718160129_practice.up.sql  20260718203037_practice_container.down.sql  20260718203037_practice_container.up.sql  20260719020925_topic_content.down.sql  (+3 more)
backend/passport/: Cargo.toml  docker-compose.yaml
backend/src/: app.rs  config.rs  errors.rs  gen_openapi.rs  macros.rs  main.rs  openapi.rs  utils.rs
k8s/: argo-lb.yml  (+2 more)
(+399 files in other folders)
